--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,6 +23,9 @@ jobs:
     - name: Build with Maven
       run: mvn clean package -DskipTests
 
+    - name: Run tests
+      run: mvn test
+
     - name: Log in to DockerHub
       uses: docker/login-action@v3
       with:
